# opencv_ffmpeg_streaming

./: CMakeLists.txt  LICENSE  README.md  main.cpp  opencv_ffmpeg_streaming.files  opencv_ffmpeg_streaming.includes
python/: CMakeLists.txt  README.md  encoder.cpp  h264_ffmpeg_encoder.py  rtmp_streaming.cpp  rtmp_streaming.files  setup.py  test_encoder.py  test_encoder_stream.py  test_stream.py
streamer/: CMakeLists.txt  ffmpeg_encoder.cpp  ffmpeg_encoder.h  streamer.cpp  streamer.hpp
